--- a/index.html
+++ b/index.html
@@ -7,20 +7,16 @@
     <link rel="stylesheet" href="./style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <title>Todo App</title>
   </head>
   <body>
     <img class="bg" src="./images/Bitmap.png" alt="" />
+  
     <div class="top">
       <h1>TODO</h1>
-      <div>
-        <span onclick="changeToSun(this)" class="hide">
-          <img src="./images/sun.svg" alt="" >
-        </span>
-        <span onclick="changeStyle(this)" c>
-          <img src="./images/moon.svg" alt="" >
-        </span>
-      </div>
+        <i id="toggle-btn" class="fas fa-moon" style="font-size: 40px; color: #fff; cursor: pointer">
+        </i>
     </div>
     <div class="todo">
       <form class="new-todo">
@@ -35,9 +31,9 @@
         <div class="card-bottom">
           <span data-length-todos></span>
           <div class="filter">
-            <span onclick="showAllTodos()">All</span>
-            <span onclick="showOnlyActive()">Active</span>
-            <span onclick="ShowOnlyCompletedTodos()">Completed</span>
+            <span onclick="showAllTodos(this)">All</span>
+            <span onclick="showOnlyActive(this)">Active</span>
+            <span onclick="ShowOnlyCompletedTodos(this)">Completed</span>
           </div>
           <span data-clear-completed>Clear Completed</span>
         </div>
