almost final step

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <input type="text" data-input placeholder="Create a new todo…"/>
       </form>
       <div class="card">
-        <ul data-list>
-      
+        <ul data-list class="scroll-effect">
+
         </ul>
         </div>
 
